# cookiecutter-aiohttp

./: README.md  cookiecutter.json
{{ cookiecutter.slug }}/: .gitignore  README.md  gulpfile.js  pyproject.toml  requirements.txt  run.py
{{ cookiecutter.slug }}/app/: config.py  main.py  routes.py  views.py
{{ cookiecutter.slug }}/app/templates/layouts/: base.html  horizontal-tw.html  horizontal.html  vertical-tw.html  vertical.html
